--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sentinex</title>
 </head>
 <body>
-    <div>
+    <div style="text-align: center;">
         Hello विमर्श!
     </div>
 </body>
